<resources>
    <string name="app_name">Note</string>
    <string name="your_admob_sdk_id">ca-app-pub-4040515803655174~2859859257</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">Note</string>
    <string name="folder">Folder</string>
    <string name="search">Search</string>
    <string name="newfolder">New folder</string>
    <string name="enternamefolder">Enter name for this folder</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="sharefolder">Share folder</string>
    <string name="addfolder">Add folder</string>
    <string name="movefolder">Move this folder</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="deletefodler">Delete folder</string>
    <string name="file_not_exit" translatable="false">File doesn\'t exists</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="areyousure">Are you sure you want to delete this note?</string>
    <string name="areyousuremulti">Are you sure you want to delete this notes?</string>
    <string name="feature">Feature are under development</string>
    <string name="entername">You must enter folder name</string>
    <string name="setting">Settings</string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="policy">Policy</string>
    <string name="version">Version 1.0.2</string>
    <string name="darkinterface">Dark interface</string>
    <string name="done">Done</string>
    <string name="youmustchoosenote">You must choose note</string>
    <string name="deletenote">Delete note</string>
    <string name="privatenote">Private Note</string>
    <string name="enterpasscode">Enter passcode</string>
    <string name="forgot">forgot?</string>
    <string name="theincorrectpassword">Re-enter the incorrect password</string>
    <string name="enterpasswordagain">Enter password again</string>
    <string name="wrongpasscode">Wrong Passcode</string>
    <string name="loading_ads_2">Please wait... This action may contains ads</string>

    <string name="contentpolicy"><b>Privacy Policy\n</b>
\nD-MobileApps built the Note app as a Free app. This SERVICE is provided by D-MobileApps at no cost and is intended for use as is.\n

\nThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\n

\nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n

\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Note unless otherwise defined in this Privacy Policy.\n
<b>\nInformation Collection and Use\n</b>

\nFor a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to PhanVanDat. The information that I request will be retained on your device and is not collected by me in any way.

\nThe app does use third party services that may collect information used to identify you.

\nLink to privacy policy of third party service providers used by the app\n

\n-Google Play Services
\n-AdMob
\n-Google Analytics for Firebase
\n-Firebase Crashlytics\n
<b>\nLog Data\n</b>

\nI want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.\n

<b>\nCookies\n</b>

\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device`s internal memory.

\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.\n

<b>\nService Providers\n</b>

\nI may employ third-party companies and individuals due to the following reasons:

\n-To facilitate our Service;
\n-To provide the Service on our behalf;
\n-To perform Service-related services; or
\n-To assist us in analyzing how our Service is used.
\n-I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.\n

<b>\nSecurity\n</b>

\nI value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.\n

<b>\nLinks to Other Sites\n</b>

\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n

<b>\nChildren’s Privacy\n</b>

\nThese Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.\n

<b>\nChanges to This Privacy Policy\n</b>

\nI may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.

\nThis policy is effective as of 2020-10-28\n

<b>\nContact Us\n</b>

\nIf you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at khoanglang270102@gmail.com.</string>
    <string name="check_list">Check List</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="add_image">Add Image</string>
    <string name="add_item">Add Item</string>
    <string name="add_sound">Add Sound</string>
    <string name="add_recording">Recording</string>
    <string name="add_draw">Draw</string>
    <string name="input_text">Input text...</string>
    <string name="txt_no_internet_connected">No internet connected</string>
    <string name="choose_image">Choose Image</string>
    <string name="please_choose_image">Please choose image!</string>
    <string name="max_video_selected">Max video selected is 5!</string>
    <string name="please_input_content">Please input content</string>
    <string name="back">Back</string>
    <string name="more_app">More App</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="ad">Ad</string>
</resources>