<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:id="@+id/layoutDialogReanme"
        app:layout_constraintDimensionRatio="243:145"
        app:layout_constraintWidth_percent="0.675"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_background_dialog_addfolder"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/tvNewfolders"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvEnternames"
            app:layout_constraintTop_toBottomOf="@id/tvNewfolders"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/enternamefolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edNameFolders"
            android:layout_width="0dp"
            android:textSize="14sp"
            app:layout_constraintDimensionRatio="174:28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.81"
            android:layout_marginTop="12dp"
            android:hint="@string/name"
            android:paddingLeft="6dp"
            android:background="@drawable/custom_background_edittext_newfolder"
            app:layout_constraintTop_toBottomOf="@id/tvEnternames"
            android:layout_height="0dp"/>

        <View
            android:id="@+id/view1"
            app:layout_constraintTop_toBottomOf="@id/edNameFolders"
            android:layout_width="match_parent"
            android:background="#CCCCCC"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"/>
        <View
            android:id="@+id/view3"
            android:layout_width="1dp"
            android:background="#CCCCCC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1"
            android:layout_height="0dp"/>
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/view1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="0dp">
            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorYellow"
                android:text="@string/cancel"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tvSave"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:text="@string/save"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>