<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutListnote"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ListNoteFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="36dp"
                android:padding="2dp"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_chevron_left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="36dp"/>

            <TextView
                android:id="@+id/tvFolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="#FEC818"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                android:text="@string/folder" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvFolders"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        android:textSize="25sp"
        android:text="@string/note"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edSearchNote"
        app:layout_constraintDimensionRatio="320:34"
        app:layout_constraintTop_toBottomOf="@id/tvFolders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:hint="@string/search"
        android:textColor="@color/colorBlack"
        android:drawableLeft="@drawable/ic_search"
        android:paddingLeft="6dp"
        android:textSize="15sp"
        android:background="@drawable/custom_background_edittext"
        app:layout_constraintWidth_percent="0.89"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutFolders"
        android:layout_width="0dp"
        android:background="@drawable/custom_background_folder"
        app:layout_constraintTop_toBottomOf="@id/edSearchNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"

        app:layout_constraintBottom_toTopOf="@id/layoutBottomNote"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewNote"
            android:layout_width="match_parent"

            android:layout_height="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/layoutFolders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="328:112"
        android:layout_marginTop="16dp"
        android:background="@color/colorBlack"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="0dp">

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBottomNote"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="360:62"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tvSize"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="3 ghi chú"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/addNote"
            android:layout_width="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_add_note"
            android:layout_marginRight="16dp"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="36dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDeleteNote"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="360:62"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tvDoneNote"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/done"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginLeft="14dp"
            android:textColor="@color/colorYellow"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tvDeleteNote"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="14dp"
            android:textColor="@color/colorYellow"
            android:padding="6dp"
            android:gravity="center"
            android:text="@string/delete"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>