<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_setting"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.SettingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="36dp"
                android:padding="2dp"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_chevron_left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="36dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorYellow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/setting" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        android:background="@color/colorView"
        android:layout_height="1dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutRating"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivRate"
            android:layout_width="24dp"
            android:src="@drawable/ic_baseline_rate_review_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="9dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="9dp"
            android:layout_height="24dp"/>

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:textColor="#3D3D3D"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/ivRate"
            android:text="@string/rating"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ivMore1"
            android:layout_width="24dp"
            android:src="@drawable/ic_more_white"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutFeedback"
        app:layout_constraintTop_toBottomOf="@id/layoutRating"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivFeedback"
            android:layout_width="24dp"
            android:src="@drawable/ic_baseline_feedback_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="9dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="9dp"
            android:layout_height="24dp"/>

        <TextView
            android:id="@+id/tvFeedback"
            android:layout_width="wrap_content"
            android:textColor="#3D3D3D"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/ivFeedback"
            android:text="@string/feedback"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ivMore2"
            android:layout_width="24dp"
            android:padding="4dp"
            android:src="@drawable/ic_more_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutPolicy"
        app:layout_constraintTop_toBottomOf="@id/layoutFeedback"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivPolicy"
            android:layout_width="24dp"
            android:src="@drawable/ic_baseline_policy_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="9dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="9dp"
            android:layout_height="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#3D3D3D"
            android:textSize="15sp"
            android:id="@+id/tvPolicy"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/ivPolicy"
            android:text="@string/policy"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ivMore3"
            android:layout_width="24dp"
            android:src="@drawable/ic_more_white"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutNight"
        app:layout_constraintTop_toBottomOf="@id/layoutPolicy"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivNight"
            android:layout_width="24dp"
            android:src="@drawable/ic_night"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="9dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="9dp"
            android:layout_height="24dp"/>

        <TextView
            android:id="@+id/tvInterface"
            android:layout_width="wrap_content"
            android:textColor="#3D3D3D"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/ivNight"
            android:text="@string/darkinterface"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"/>


        <Switch
            android:id="@+id/tvSwich"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutVersion"
        app:layout_constraintTop_toBottomOf="@id/layoutNight"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivVersion"
            android:layout_width="24dp"
            android:src="@drawable/ic_version"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="9dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="9dp"
            android:layout_height="24dp"/>

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:textColor="#3D3D3D"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/ivVersion"
            android:text="@string/version"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>